// proto/greeter.proto
syntax = "proto3";

package greeter;

option go_package = "my-otel-demo/proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
